<resources>
    <string name="app_name">STAC</string>
    <string name="loading">Loading ...</string>
    <string name="internet">No Internet Connection</string>
    <string name="processing">Processing ...</string>
    <string name="welcome_message">Welcome Back!</string>
    <string name="face_id">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="add_image">Add Image</string>
    <string name="signUp_create_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="from_stac_it">STAC-IT AI</string>
    <string name="stac">STAC</string>
    <string name="status"></string>
    <string name="text_dare_to_defy">Dare to Defy</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_face_id_icon">face id icon</string>
    <string name="text_pin_lock_icon">pin lock icon</string>
    <string name="text_home">Home</string>
    <string name="text_chat">Chat</string>
    <string name="text_profile">Profile</string>
    <string name="text_settings">Settings</string>
    <string name="text_fab_button">fab button</string>
    <string name="text_good_morning">Good morning</string>
    <string name="text_username">username</string>
    <string name="text_language">Language</string>
    <string name="text_english">English</string>
    <string name="cont_des_language_image">image view for language card</string>
    <string name="cont_des_face_id_image">image view for face-id card</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_face_id">Face ID</string>
    <string name="text_listening">Listening</string>
    <string name="text_active">Active</string>
    <string name="cont_des_listen_image">image view for listening card</string>
    <string name="text_voice">Voice</string>
    <string name="text_alexa">Alexa</string>
    <string name="cont_des_voice_image">image view for voice card</string>
    <string name="text_ai">AI</string>
    <string name="cont_des_ai_image">image view for ai card</string>
    <string name="text_country">Country</string>
    <string name="text_usa">USA</string>
    <string name="cont_des_country_image">image view for country card</string>
    <string name="text_type_a_message_hint">Type a message</string>
    <string name="text_select_user">Select Contact</string>
    <string name="text_recent">Conversations</string>
    <string name="text_discover">Discover</string>
    <string name="text_stac_about_message">Simultaneous Translation \n And Communication</string>
    <string name="messages">Chats</string>
    <string name="text_new_chat">New Chat</string>
    <string name="text_results">Results</string>
    <string name="text_accounts">Accounts</string>
    <string name="text_online">Online</string>
    <string name="stac_email">stac.ai@stacit.com</string>
    <string name="stac_security">Punisher_Pete2003</string>
    <string name="text_image_view">text image view</string>
    <string name="sign_out">Sign Out</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="text_facial_recognition">Facial Recognition</string>
    <string name="ai_amp_ml"><![CDATA[AI & ML]]></string>
    <string name="private_account">Private Account</string>
    <string name="notifications">Notifications</string>
    <string name="night_mode">Night Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="camera">Camera</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="personal_information">Personal Information</string>
    <string name="language">Language</string>
    <string name="delete_account">Delete Account</string>
    <string name="text_source">Source</string>
    <string name="text_result">Result</string>
    <string name="translate_fab">Translate FAB</string>
    <string name="text_log_in">Log In</string>
    <string name="text_enter_pin">Enter Pin</string>
    <string name="image_preview_text">Image Preview</string>
    <string name="full_name">Full Name</string>
    <string name="settings_text_account">Account</string>
    <string name="settings_text_appearance">Appearance</string>
    <string name="settings_text_chats">Chats</string>
    <string name="settings_text_stories">Stories</string>
    <string name="settings_text_privacy">Privacy</string>
    <string name="settings_text_about">About</string>
    <string name="settings_profile_text_description">Your profile is protected using end-to-end encryption. Changes to your profile may take sometime to update.</string>
    <string name="settings_text_profile_edit_name_description">You can update your first and last name from this page and it will be changed across the entire application, it may take a while to update though.</string>
    <string name="settings_text_profile_edit_photo">Edit Photo</string>
    <string name="settings_text_profile_profile">Profile</string>
    <string name="settings_text_profile_last_name">Last Name</string>
    <string name="settings_text_profile_first_name">First Name</string>
    <string name="settings_text_profile_your_name">Your Name</string>
    <string name="settings_text_profile_about_description">Tell your friends and the people you talk to about yourself, this will add a bit more personality to your profile and makes you stand out more.</string>
    <string name="settings_text_profile_about_good_listener">Good Listener</string>
    <string name="settings_text_profile_about_innovative">Innovative</string>
    <string name="settings_text_profile_about_very_friendly">Very friendly</string>
    <string name="settings_text_profile_free_to_chat">Free to chat</string>
    <string name="settings_text_profile_taking_a_break">Taking a break</string>
    <string name="settings_text_profile_speak_freely">Speak Freely</string>
    <string name="settings_text_profile_about_tell_people_about_you">Tell people about you...</string>
    <string name="settings_text_profile_select_avatar">Select an Avatar</string>
    <string name="settings_text_profile_text">text</string>
    <string name="settings_text_profile_gallery">gallery</string>
    <string name="settings_text_profile_camera">camera</string>
    <string name="settings_text_profile_edit_photo_description">Select a profile image from either the gallery, take a new photo, use your initials, or select an avatar from the list of default avatars.</string>
    <string name="settings_text_account_description">This will delete your account information, profile, and all of your messages.</string>
    <string name="settings_text_account_delete_account">Delete Account</string>
    <string name="settings_text_account_data_control">Data Control</string>
    <string name="settings_text_appearance_chat_wallpaper">Chat Wallpaper</string>
    <string name="settings_text_appearance_theme">Theme</string>
    <string name="settings_text_appearance_system">System</string>
    <string name="settings_text_appearance_description">Change the theme and give the chat view a wallpaper of your choice. Make the app the right fit for you.</string>
    <string name="settings_text_appearance_design">Design</string>
    <string name="settings_text_light">Light</string>
    <string name="settings_text_select_theme">Select Theme</string>
    <string name="settings_text_dark">Dark</string>
    <string name="settings_text_appearance_chat_color_amp_wallpaper"><![CDATA[Chat Color & Wallpaper]]></string>
    <string name="settings_text_appearance_select_wallpaper">Select Wallpaper</string>
    <string name="settings_text_appearance_reset_wallpaper">Reset Wallpaper</string>
    <string name="settings_text_appearance_chat_color">Chat Color</string>
    <string name="settings_text_appearance_reset_chat_color">Reset Chat Color</string>
    <string name="settings_appearance_chat_color_image">settings appearance chat color image</string>
    <string name="settings_text_appearance_select_chat_color">Select Chat Color</string>
    <string name="settings_text_appearance_chat_color_description">Select a color from the color palette above. Color selected will only affect messages that are sent by you.</string>
    <string name="settings_text_appearance_2_10_pm">2:10 PM</string>
    <string name="settings_text_appearance_chat_color_preview">Chat color preview</string>
    <string name="settings_text_appearance_chat_Wallpaper_preview">Chat Wallpaper preview</string>
    <string name="settings_text_appearance_2_20_pm">2:20 PM</string>
    <string name="settings_text_appearance_today">Today</string>
    <string name="settings_text_appearance_select_chat_wallpaper">Select Chat Wallpaper</string>
    <string name="settings_text_appearance_chat_wallpaper_description">Select a color from the color palette above. Color selected will only affect your conversation background.</string>
    <string name="loading_text_xtablish_ai">Xtablish AI</string>
    <string name="settings_text_chat_smart_translation">Smart Translation</string>
    <string name="settings_text_chat_stac_ai">STAC AI</string>
    <string name="settings_text_chat_native_language">Native Language</string>
    <string name="settings_text_chat_native_language_description">Language selected is used for STAC smart translation, it will be used as the destination language.</string>
    <string name="settings_text_chat_stac_ai_description">STAC AI feature enables speech to text, which makes sending a message super easy.</string>
    <string name="settings_text_chat_smart_translation_description">Language translation enables dynamic translation from source to destination.</string>
    <string name="settings_text_chat_clear_chat_history">Clear Chat History</string>
    <string name="settings_text_stories_access">Stories automatically delete after 24 hours. Choose who can view your stories.</string>
    <string name="settings_text_stories_view_receipts_description">See when your stories are viewed. If disabled, you won\'t see when others view your stories.</string>
    <string name="settings_text_stories_delete_stories">Delete Stories</string>
    <string name="settings_text_stories_choose_who_can_view_your_story">Choose who can view your story</string>
    <string name="settings_text_stories_my_story">My Story</string>
    <string name="settings_text_stories_allow_quick_reply">Allow Quick Reply</string>
    <string name="settings_text_stories_quick_reply">Quick Reply</string>
    <string name="settings_text_stories_my_story_access_description">Choose which group can view your story. Change won\'t affect stories you\'ve already posted.</string>
    <string name="settings_text_stories_who_can_view_your_story">Who Can View Your Story</string>
    <string name="settings_text_stories_quick_reply_description">Let people with permission to view your story react and reply from the story view.</string>
    <string name="settings_text_stories_access_public">Public</string>
    <string name="settings_text_stories_access_friends">Friends</string>
    <string name="settings_text_stories_access_private">Private</string>
    <string name="settings_text_notification_sounds">Sounds</string>
    <string name="settings_text_notifications_play_sound">Play Sound</string>
    <string name="settings_text_notifications_notify_me">Notify Me</string>
    <string name="settings_text_notifications_play_sound_description">Enable this if you want notifications to be delivered with sound and haptics.</string>
</resources>