<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_background"
    android:animateLayoutChanges="true"
    tools:context=".activities.userProfileActivity">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="20dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:addElevationShadow="false"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:menu="@menu/navbar_buttons"
            android:background="@drawable/transparent_background"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/icon_blue"
        android:contentDescription="@string/text_fab_button"
        android:src="@drawable/btn_fab_mic"
        android:tint="@android:color/white"
        app:borderWidth="0dp"
        app:layout_anchor="@id/bottomAppBar"
        tools:ignore="RedundantDescriptionCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:background="@drawable/background_view_backboard">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_31sdp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_good_morning"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_username"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="118dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutHeader"
            android:layout_above="@id/bottomAppBar"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            tools:ignore="NotSibling">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="4"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@color/white"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_language"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefLanguageImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_language_image"
                            android:src="@drawable/ic_profile_language" />

                        <TextView
                            android:id="@+id/prefLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_english"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_face_id"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefFaceIDImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_face_id_image"
                            android:src="@drawable/ic_profile_face_id" />

                        <TextView
                            android:id="@+id/prefFaceID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_enabled"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_listening"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefListenImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_listen_image"
                            android:src="@drawable/ic_profile_mic" />

                        <TextView
                            android:id="@+id/prefListen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_active"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="2"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_voice"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefVoiceImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_voice_image"
                            android:src="@drawable/ic_profile_listening" />

                        <TextView
                            android:id="@+id/prefVoice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_alexa"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_ai"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefAIImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_ai_image"
                            android:src="@drawable/ic_profile_ai" />

                        <TextView
                            android:id="@+id/prefAI"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_active"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="3"
                    android:layout_rowWeight="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_country"
                            android:textColor="@color/primary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/prefCountryImage"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/cont_des_country_image"
                            android:src="@drawable/ic_profile_country" />

                        <TextView
                            android:id="@+id/prefCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_usa"
                            android:textColor="@color/secondary_text"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>